bit of a reorg, new chapter for vector fields, latex'ed my notes from steve and mathieu

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
@@ -304,7 +304,7 @@ a kind of cohesive motives.},
     url = {{https://github.com/leanprover-community/mathlib/blob/cd6f2720b829061d9f01a2ee7bf4bc6ef53fedde/src/geometry/manifold/charted\_space.lean}}
 }
 
-@Book{hottbook,
+@book{hottbook,
   author =    {{Univalent Foundations Program}},
   title =     {Homotopy Type Theory: Univalent Foundations of Mathematics},
   publisher = {\url{https://homotopytypetheory.org/book}},
