--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -61,6 +61,10 @@
 \newcommand{\ent}{\vdash}
 \newcommand{\adj}{\dashv}
 \newcommand{\re}{\mathcal{R}}%realization
+\newcommand{\Gon}{\ensuremath{\mathsf{Gon}}}
+\newcommand{\base}{\ensuremath{\mathsf{base}}}
+%DONTDOTHIS\newcommand{\loop}{\ensuremath{\mathsf{loop}}}
+\newcommand{\loopo}{\ensuremath{\mathsf{loop}}}
 \newcommand{\refl}{\ensuremath{\mathsf{refl}}}
 \newcommand{\ap}{\ensuremath{\mathsf{ap}}}
 \newcommand{\pr}{\ensuremath{\mathrm{pr}}}
