--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -34,14 +34,113 @@ Higher inductive types can capture some concepts of differential geometry in two
 ``It is always ourselves we work on, whether we realize it or not. There is no other work to be done in the world.'' --- Stephen Talbott, \emph{The Future Does Not Compute}\cite{talbott}
 \end{quote}
 
+\section*{Notes so far from Mathieu and Steve}
+\subsection{November 21, Mathieu and Steve}
+Constructors are present in the HIT, and the HIT is a type. The universe must be closed under inductive types.
+
+Polygons of different cardinality will tangle with transport.
+
+Greg suggests I could use an isomorphism from a combinatorial manifold to a HIT with just one 2-cell to capture ``total curvature'':
+
+\begin{verbatim}
+def S1:
+base: S1
+loop: base=base
+
+def S2:
+N: S2
+surf: refl_N = refl_N
+
+def torus:
+b:torus
+p,q:b=b
+donut:p.q=q.p
+\end{verbatim}
+
+The map \( \re \) (realization) is a lossy map. \( R(S2):\uni  \).
+
+``strict morphism of HITs'': map constructors to constructors. \( C_4\to S^1 \) is a strict map.
+
+\( \re(C_4) \) has an equivalence to \( \re(S^1) \). Perhaps this is \( \re \)(the map \( C_4\to S^1 \), the strict one). But \( S^1\to C_4 \) is non-strict, uses generated data, uses data from \( \re(C_4) \).
+
+Claim: we cannot see the one-notch "90 degree" rotation of \( C_4 \) at the level of types.
+
+\subsubsection{Extension to next dimension as obstruction theory}
+
+\begin{itemize}
+\item Consider a type \( X \) with 1-skeleton \( X_1 \).
+\item HIT gives skeletal filtration
+\item functions naturally given as per-skeleton steps
+\item there are constraints/obstructions: obstruction to extend map \( T \) from vertices \( a, b \) to path \( e:a=b \) is that \( T(a) \) and \( T(b) \) are in the same connected component.
+\item say a 2-cell \( F \) contracts a loop \( L: F:L=\refl_v \) some vertex \( v \)
+\item we have a choice of \( v \) for each face \( F \)
+\item then \( T(F) \) must be in same component as \( \refl_v \) (\( \refl_v:\pi_1 X \) with basepoint \( v \))
+\item \( T(F) \) is merely \( \refl \), and holonomy is merely \( \refl \), and connection on this face \( F \) is merely flat
+\item curvature is a function from 2-cells to \( \pi_1(X,v) \)
+\end{itemize}
+
+\begin{align*}
+T(v)&:U\\
+T(L)&:T(v)=T(v)\\
+T(F)&:refl_{T(v)}=T(L)
+\end{align*}
+
+The class \( ||T(L)||:\pi_1(U,T(v)) \) is an obstruction to having \( T(F) \), to extending \( T \) to \( F \).
+
+The hierarchy of maps extending to higher skeletons, which we call connections of dimension 1, 2, etc. This works for ANY HIT. The combinatorial manifold structure is just one special case that gives me a specific map \( T \).
+
+Then Mathieu drew on the board a patch of a combinatorial manifold with links of different vertex cardinalities. Then he wrote some maps that might help define the degree/index of a vector field.
+\includegraphics[width=400pt]{board2024.jpg}
+
+\subsection{November 27, Mathieu}
+
+An angle is: a path in \( \so \) from \( \base \), which is equiv to a path in \( \Aut\so \) from the identity to another automorphism. (automorphism is primary: aut of tangent circle).
+
+Viewed as automorphisms we can compose them.
+
+Viewed as paths, multiply path 2 by the element at the endpoint of path 1.
+
+Curvature maps a loop in the base to a path in automorphisms of the tangent circle at the base.
+
+A vector field + a trivialization (``fiducial v.f.'' in the book by Needham) maps a loop in the base to the tangent circle at the basepoint. We can take the index/degree of this.
+
+Given a loop \( L:v=v \), v.f. \( F \), take \( F(L):tr_L(F(v))=F(v) \) (\( \apd \), dependent action on paths).
+
+Type family \( f:A->U \), \( \prod_{a:A}fa \) is the type of dependent functions. Let \( X:\prod_{a:A}fa \). We can apply \( X \) to a path \( p:a=_A b \). \( X(p) \) is a path over \( p \).
+\[ 
+X(p):tr_p(X(a))=X(b) 
+\]
+\( X(a), X(b) \) are terms of different types.
+
+Greg reminded about horizontal projection interpretation of covariant derivative: covariant derivative of \( F \) along itself: lift \( F \) to \( F' \) horizontal on \( TP (P\to M) \), take \( [F', F'] \)
+
+Tangent bundle \( TM\to M \) w/ connection \( \omega \). Covariant derivative of \( F \) in the direction of \( X \): \( \nabla_X(F)(x) \). 
+\begin{enumerate}
+\item Lift \( X \) and \( F \) to horizontal fields \( X', F' \) in \( TTM \)
+\item Compute \( [X', F'] \) to \( TTM \)
+\item Decompose \( [X', F'] = [X, F]' + \omega([X', F']) \)
+\end{enumerate}
+
+Mathieu would rather use this formulation:
+\[ 
+\nabla_X(F) = [X, F] + \omega(X)(F) 
+\]
+Now take \( X=F \):
+\[ 
+\nabla_F(F) = [F, F] + \omega(F)(F) = \omega(F)(F) 
+\]
+
+\clearpage
 \input{discrete_gauge_theory_intro}
-
+\clearpage
 \input{discrete_gauge_theory_torsors}
-
+\clearpage
 \input{discrete_gauge_theory_combman}
-
-% \input{discrete_gauge_theory_connections}
-% 
+\clearpage
+\input{discrete_gauge_theory_connections}
+\clearpage
+\input{discrete_gauge_theory_vector_fields}
+\clearpage
 % \input{discrete_gauge_theory_ap_is_d}
 
 \bibliography{connections}
