the version I sent Mathieu this week, except I then tried to fiddle with theorem numbering in the HTML version and failed; and I added a change-tracking package that I'll use going forward to highlight changes for him

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -6,6 +6,8 @@
 \usepackage{titling}
 \usepackage[nottoc]{tocbibind}
 \usepackage{fancyvrb}
+\usepackage[commandnameprefix=ifneeded]{changes}
+\definechangesauthor[name=Greg, color=red]{Greg}
 \setmainfont{Baskerville}
 \setsansfont{Quadrat-Serial}
 \setmonofont{Courier New}
@@ -33,6 +35,8 @@ Higher inductive types can capture some concepts of differential geometry in two
 \centering
 ``It is always ourselves we work on, whether we realize it or not. There is no other work to be done in the world.'' --- Stephen Talbott, \emph{The Future Does Not Compute}\cite{talbott}
 \end{quote}
+
+\listofchanges[title=Changelist]
 
 \section*{Notes so far from Mathieu and Steve}
 \subsection{November 21, Mathieu and Steve}
