--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_connections.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory_connections.tex
@@ -1,4 +1,4 @@
-\section{Connections and vector fields}
+\section{Connections and curvature}
 
 \subsection{The function \texorpdfstring{\( T \)}{T}}
 
