--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -139,6 +139,7 @@
 \newcommand{\LAut}{\mathrm{LAut}}
 \newcommand{\im}{\mathrm{im}}
 \newcommand{\Fin}{\mathrm{Fin}}
+\newcommand{\unit}{\mathbb{1}}
 \newcommand{\loopy}{\mathsf{\Omega}}
 \newcommand{\xbox}{\mathsf{xbox}}
 \newcommand{\disk}{\mathsf{disk}}
