define presented types, geometric realization, and higher realization

--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/connections.bib
@@ -463,6 +463,14 @@ year = {2010},
 url = {http://resolver.caltech.edu/CaltechTHESIS:05282010-102307125}
 }
 
+@mastersthesis{vonraumer_nonabelian,
+title = {Formalization of Non-Abelian Topology for Homotopy Type Theory},
+school = {Carnegie Mellon University},
+author = {Jakob von Raumer},
+year = {2015},
+url = {https://github.com/javra/msc-thesis}
+}
+
 @inproceedings{crane_ddg,
 author = {Keenan Crane and Fernando de Goes and Mathieu Desbrun and Peter Schröder},
 title = {Digital Geometry Processing with Discrete Exterior Calculus},
