--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -39,6 +39,9 @@ Higher inductive types can capture some concepts of differential geometry in two
 \listofchanges[title=Changelist]
 
 \section*{Notes so far from Mathieu and Steve}
+\subsection{January 24, Mathieu}
+Slicing a type over \( \EMzo \) gives us the type of types together with a map to \( \EMzo \).
+
 \subsection{November 21, Mathieu and Steve}
 Constructors are present in the HIT, and the HIT is a type. The universe must be closed under inductive types.
 
