--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -106,6 +106,7 @@
 \newcommand{\combmfdsett}{\mathsf{CombMfdSet_2}}
 \newcommand{\simcomp}{\mathsf{SimpCompSet_n}}
 \newcommand{\simcompt}{\mathsf{SimpCompSet_2}}
+\newcommand{\simcompk}{\mathsf{SimpCompSet_k}}
 \newcommand{\smfd}{\mathsf{SmoothMfd}}
 \newcommand{\calg}{\mathsf{CAlg}_{\rr}}
 \newcommand{\cart}{\mathsf{CartSp}}
@@ -147,6 +148,7 @@
 \newcommand{\GTor}{\mathsf{GTor}}
 \newcommand{\Tor}{\mathsf{Tor}}
 \newcommand{\GType}{\mathsf{GType}}
+\newcommand{\Topcat}{\mathsf{Top}}
 \newcommand{\Type}{\mathsf{Type}}
 \newcommand{\Typeo}{\Type_{\shapeo}}
 \newcommand{\Types}{\Type_{\shape}}
