--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/discrete_gauge_theory.tex
@@ -37,7 +37,9 @@ Higher inductive types can capture some concepts of differential geometry in two
 \end{quote}
 
 \listofchanges[title=Changelist]
+Sections 3, 4, 5 are very new.
 
+\begin{comment}
 \section*{Notes so far from Mathieu and Steve}
 \subsection{January 24, Mathieu}
 Slicing a type over \( \EMzo \) gives us the type of types together with a map to \( \EMzo \).
@@ -136,6 +138,7 @@ Now take \( X=F \):
 \[ 
 \nabla_F(F) = [F, F] + \omega(F)(F) = \omega(F)(F) 
 \]
+\end{comment}
 
 \clearpage
 \input{discrete_gauge_theory_intro}
@@ -153,6 +156,7 @@ Now take \( X=F \):
 
 \bibliography{connections}
 \end{document}
+
 
 
 
