--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/greg.sty
@@ -147,12 +147,15 @@
 \newcommand{\xdisk}{\mathsf{xdisk}}
 \newcommand{\GTor}{\mathsf{GTor}}
 \newcommand{\Tor}{\mathsf{Tor}}
+\newcommand{\MType}{\mathsf{MType}}
+\newcommand{\MTypen}{\MType^{[n]}}
 \newcommand{\GType}{\mathsf{GType}}
 \newcommand{\Topcat}{\mathsf{Top}}
 \newcommand{\Type}{\mathsf{Type}}
 \newcommand{\Typeo}{\Type_{\shapeo}}
 \newcommand{\Types}{\Type_{\shape}}
 \newcommand{\Typesp}{\Type_{\shape *}}
+\newcommand{\Typen}{\Type^{[n]}}
 \newcommand{\pinv}{p^{-1}}
 \newcommand{\aut}{\mathrm{Aut}}
 \newcommand{\diffeo}{\mathrm{Diffeo}}
